# risk_score

./: .gitignore  .gitmodules  README.md  grs.py  oram2016.interactions.txt  oram2016.weights.multilocus.txt  oram2016.weights.txt  oram2016.weights_hla.txt  pkclick.py  pkcsv.py  pkrs.py  pksnps.py  pyproject.toml  risk_score.py  riskscore.py  setup.cfg  sharp2019.weights.multilocus.txt  sharp2019.weights.txt
envmodules/riskscore/: 1.4.0  1.5.0  2.0.0  2.2.1  2.3.0
extras/riskscore/: 1.6.0
src/pkrs/: __init__.py  interaction.py  oram2016.py  pkrs.py  riskscore.py  sharp2019.py
src/pksnp/: __init__.py  allele.py  call.py  genotype.py  pksnp.py  population_alleles.py  sample_alleles.py
src/riskscore/: __init__.py  cli.py  riskscore.py  version.py
weights/: calc_ranking.py  oram2016.posidlist  oram2016.rsidlist  oram2016.txt.gz.old  sharp2019.posidlist  sharp2019.rsidlist  sharp2019.txt.gz.old
